# Slicer

Modules/Scripted/DICOM/: DICOM.py
Modules/Scripted/DataProbe/: CMakeLists.txt
Modules/Scripted/DataProbe/DataProbeLib/: SliceViewAnnotations.py
Modules/Scripted/DataProbe/DataProbeLib/Resources/UI/: settings.ui
